<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="base.vivek.cs639springhw4.MainActivity">

    <TextView
        android:id="@+id/exampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/example_value"
        android:textSize="@dimen/font_size" />

    <base.vivek.cs639springhw4.custom.CustomCircle
        android:id="@+id/customCircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exampleTextView"
        android:padding="@dimen/padding_to_customview"
        custom:circleColor="@color/colorAccent"
        custom:circleSize="20"
        custom:circleSpeed="5" />

    <TextView
        android:id="@+id/createOwnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customCircle"
        android:layout_centerHorizontal="true"
        android:text="@string/create_own"
        android:textSize="@dimen/font_size" />

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createOwnTextView"
        android:layout_above="@+id/cciRL"
        android:layout_marginBottom="@dimen/recyclerview_margin"
        android:scrollbars="none" />-->

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:fadingEdge="none"
        android:listSelector="#00000000"
        android:scrollbars="none"
        android:layout_below="@+id/createOwnTextView"
        android:layout_above="@+id/cciRL"
        android:layout_marginBottom="@dimen/recyclerview_margin"/>

    <RelativeLayout
        android:id="@+id/cciRL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_layout_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/radius_value"
                    android:textSize="@dimen/font_size" />

                <EditText
                    android:id="@+id/radiusEditText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_toEndOf="@+id/radiusTextView"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/speedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/speedEditText"
                    android:text="@string/speed_value"
                    android:textSize="@dimen/font_size" />

                <EditText
                    android:id="@+id/speedEditText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/colorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_value"
                    android:textSize="@dimen/font_size" />

                <LinearLayout
                    android:id="@+id/color_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/color_view_margin"
                    android:layout_marginBottom="@dimen/color_view_margin"
                    android:layout_toEndOf="@id/colorTextView"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/red"
                        android:layout_width="@dimen/color_button_size"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/color_view_margin"
                        android:background="@color/colorRed" />

                    <Button
                        android:id="@+id/orange"
                        android:layout_width="@dimen/color_button_size"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/color_view_margin"
                        android:background="@color/colorOrange" />

                    <Button
                        android:id="@+id/green"
                        android:layout_width="@dimen/color_button_size"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/color_view_margin"
                        android:background="@color/colorGreen" />

                    <Button
                        android:id="@+id/blue"
                        android:layout_width="@dimen/color_button_size"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/color_view_margin"
                        android:background="@color/colorBlue" />

                    <Button
                        android:id="@+id/yellow"
                        android:layout_width="@dimen/color_button_size"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/color_view_margin"
                        android:background="@color/colorYellow" />
                </LinearLayout>


                <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/add_button" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sciRL"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="@dimen/bottom_layout_height"
        android:visibility="invisible">

        <TextView
            android:id="@+id/sciSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="@string/speed_value"
            android:textSize="@dimen/font_size" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="@dimen/bottom_layout_button_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/sciSpeedTextView"
            android:text="@string/minus_button" />

        <TextView
            android:id="@+id/sciSpeedValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sciSpeedTextView"
            android:layout_alignParentBottom="true"
            android:text="SS"
            android:textSize="@dimen/font_size" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="@dimen/bottom_layout_button_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/sciSpeedTextView"
            android:text="@string/plus_button" />

    </RelativeLayout>
</RelativeLayout>